--- a/Qmos.UI/appsettings.json
+++ b/Qmos.UI/appsettings.json
@@ -20,6 +20,6 @@
     "PasswordEmailFrom": "Revs1986*",
     "DisplayName": "Portal de Operaciones"
   },
-  "APIUrl": "http://192.168.0.70:81/api/",
+  "APIUrl": "http://sapwebbeap03:8003/api/",
   "RecoveryUrl": "http://localhost:44353/"
 } 
