Style(): Settings in the administration module

--- a/Qmos.UI/appsettings.json
+++ b/Qmos.UI/appsettings.json
@@ -18,7 +18,7 @@
     "Smtp": "smtp.gmail.com",
     "EmailFrom": "ronner.velazquez@key-core.com",
     "PasswordEmailFrom": "Revs1986*",
-    "DisplayName": "Portal de Operaciones"
+    "DisplayName": "Operations Portal"
   },
   "APIUrl": "http://sapwebbeap03:8003/api/",
   "RecoveryUrl": "http://localhost:44353/"
